Converted from ascii to CHAR in stage2 lisp

** Fixed
Updated checksums to reflect changes in stage2 FORTH
Fixed dis behavior in regards to hex values in strings
Updated checksums to reflect changes in stage2 Lisp
Added missing library reference form stage2 lisp High level prototype
Fixed bug in stage2 FORTH PRINT function

** Removed
the HERE and DP! are gone from ' now in stage3 FORTH

* 0.0.8 - 2017-06-17
** Added
Incorporated High level prototypes into makefile
Added logic to catch non-existent input files and report a useful error message
Added DP! to stage2 forth
Added EXECUTE to stage2 forth
Added ABORT to stage2 forth
Added string print and address to output of High level prototype disassembler
Added initial prototype library for forth developers who want better ANS support
Expanded stage0 VM Halcode to provide a way to lookup total amount of physical memory

** Changed
Extended VPATH in makefile to shorten dependency names
Updated checksum for stage2 forth
Reversed the order of operands in stage2 forth arithmetic
Modified webIDE to leverage new enhanced disassembler output
Altered stage2 forth KEY to echo keypress so that S" and similiar functions behave like gforth
Altered EXECUTE in stage2 forth to set R12 and load its pointer and jump

** Fixed
Stack offset bug in stage2 forth was found and fixed by reepca in record time
Fixed 2DUP and ?DUP in stage2 forth
Swapped TRUE and FALSE values in stage2 forth to match http://lars.nocrew.org/dpans/dpans3.htm#3.1.3
Adjusted order of comparisions to better match ans
Stack leak in stage2 forth found and corrected
Stage2 forth no longer attempts to parse carriage returns
Stage2 forth now will display and error and clear the stacks in the event of an undefined input
Stage2 forth now respects the HIDDEN Flag
Stage2 forth now no longer clears during CMOVE to better comply with the spec

** Removed
Removed need for sponge to be used to run webIDE

* 0.0.7 - 2017-06-03
** Added