@@ -2152,42 +2152,6 @@
 	"Remaining Cells: "
 
 
-;; prim_char
-;; Recieves a list in R0
-;; Converts all integers to CHARs
-:prim_char_String
-	"ascii!"
-:prim_char
-	CMPSKIPI.NE R0 $NIL         ; If NIL Expression
-	RET R15                     ; Just get the Hell out
-	PUSHR R0 R15                ; Protect R0
-	PUSHR R1 R15                ; Protect R1
-	PUSHR R2 R15                ; Protect R2
-	PUSHR R3 R15                ; Protect R3
-	LOADUI R3 $NIL              ; Using NIL
-
-:prim_char_0
-	CMPJUMPI.E R0 R3 @prim_char_done
-	LOAD32 R1 R0 4              ; Get ARGS->CAR
-	LOAD32 R2 R1 0              ; Get ARGS->CAR->TYPE
-	LOAD32 R0 R0 8              ; Set ARGS to ARGS->CDR
-	CMPSKIPI.NE R2 4            ; If Type is INT
-	JUMP @prim_char_1           ; Convert to CHAR
-	JUMP @prim_char_0           ; Go to next list item
-
-:prim_char_1
-	LOADUI R2 128               ; Using Type CHAR
-	STORE32 R2 R1 0             ; Update ARGS->CAR->TYPE
-	JUMP @prim_char_0           ; Keep looping
-
-:prim_char_done
-	POPR R3 R15                 ; Restore R3
-	POPR R2 R15                 ; Restore R2
-	POPR R1 R15                 ; Restore R1
-	POPR R0 R15                 ; Restore R0
-	RET R15
-
-
 ;; prim_integer_to_char
 ;; Recieves a list in R0
 ;; Converts INT to CHAR
@@ -2694,13 +2658,6 @@
 	CALLI R15 @make_prim        ; MAKE_PRIM
 	MOVE R1 R0                  ; Put Primitive in correct location
 	LOADUI R0 $prim_freecell_String ; Using PRIM_FREECELL_STRING
-	CALLI R15 @make_sym         ; MAKE_SYM
-	CALLI R15 @spinup           ; SPINUP
-
-	LOADUI R0 $prim_char        ; Using PRIM_CHAR
-	CALLI R15 @make_prim        ; MAKE_PRIM
-	MOVE R1 R0                  ; Put Primitive in correct location
-	LOADUI R0 $prim_char_String ; Using PRIM_char_STRING
 	CALLI R15 @make_sym         ; MAKE_SYM
 	CALLI R15 @spinup           ; SPINUP
 
